<resources>
    <string name="app_name">SimpleToDo</string>
    <string name="click_to_edit_icon">Click to Edit Icon</string>
    <string name="no_tasks_to_display">No tasks to display...</string>
    <string name="add_a_task">Add a task</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="priority">Priority</string>
    <string name="due_date">Due Date</string>

    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>